# Okolors

./: Cargo.toml  README.md  flake.nix  justfile  typos.toml
.github/: dependabot.yml
.github/workflows/: bin_release.yml  check.yml  scheduled.yml  test.yml
img/formats/: README.md
img/unsplash/: README.md
okolors/: CHANGELOG.md  Cargo.toml  README.md
okolors-cli/: Cargo.toml
okolors-cli/src/: cli.rs  main.rs
okolors/src/: deps.rs  lib.rs
scripts/: benchmark.nu  examples.nu
