[package]
name = "okolors"
version = "0.8.1"
rust-version.workspace = true
edition.workspace = true
description = "Create color palettes from images by performing k-means clustering in the Oklab color space."
repository = "https://github.com/IanManske/Okolors"
license = "MIT OR Apache-2.0"
include = ["src", "CHANGELOG.md"]
keywords = ["palette", "theme", "color", "oklab", "kmeans"]
categories = ["multimedia::images"]

[features]
default = ["threads", "image"]
std = ["quantette/std"]
threads = ["quantette/threads", "rayon", "std"]
image = ["quantette/image", "std", "dep:image"]

[dependencies]
quantette = { version = "0.5.1", default-features = false, features = ["kmeans"] }
palette = { workspace = true, default-features = false }
image = { workspace = true, default-features = false, optional = true }
rayon = { workspace = true, optional = true }

# for minimal-versions
[target.'cfg(any())'.dependencies]
flate2 = { version = "1.1.5", default-features = false, optional = true } # needed for image / png to build on stable rust
tap = { version = "1.0.1", default-features = false, optional = true } # needed for bitvec

[lints]
workspace = true

[[package.metadata.docs.rs]]
all-features = true
